<resources>
	 <string name="app_name">Single Screen App</string>

	 <!-- TODO: Remove or change this placeholder text -->
	 <string name="hello_blank_fragment">Hello blank fragment</string>
	 <string name="mango_fruit">Mango Company</string>
	 <string name="contact_us">Contact US</string>
	 <string name="info_item">Info Item</string>
	 <string name="description">Description</string>
	 <string name="_201014775215">: +201014775215</string>
	 <string name="alialfayed1_gmail_com">: alialfayed1@gmail.com</string>
	 <string name="_10_st_cairo_egypt">: 10.St Cairo , Egypt</string>
	 <string name="price">Price :</string>
	 <string name="descriptiontext">About :</string>
	 <string name="_50">50 $</string>
	 <string name="dec_text">Punto Fa, S.L., trading as Mango, is a Spanish clothing design and manufacturing company, founded in Barcelona, by brothers Isak Andic and Nahman Andic</string>
</resources>
