<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	 xmlns:app="http://schemas.android.com/apk/res-auto"
	 xmlns:tools="http://schemas.android.com/tools"
	 android:layout_width="match_parent"
	 android:layout_height="match_parent"
	 tools:context=".MainActivity">
	 <androidx.constraintlayout.widget.ConstraintLayout
		  android:layout_width="match_parent"
		  android:layout_height="wrap_content">

		  <ImageView
			   android:id="@+id/imgView_Item"
			   android:layout_width="0dp"
			   android:layout_height="300dp"
			   android:layout_marginStart="50dp"
			   android:layout_marginTop="8dp"
			   android:layout_marginEnd="50dp"
			   android:contentDescription="@string/description"
			   android:elevation="4dp"
			   android:scaleType="fitCenter"
			   android:src="@drawable/ic_mango"
			   app:layout_constraintEnd_toEndOf="parent"
			   app:layout_constraintStart_toStartOf="parent"
			   app:layout_constraintTop_toTopOf="parent" />

		  <TextView
			   android:id="@+id/textView"
			   android:layout_width="wrap_content"
			   android:layout_height="wrap_content"
			   android:layout_marginStart="16dp"
			   android:layout_marginTop="16dp"
			   android:text="@string/mango_fruit"
			   android:textColor="@color/colorPrimaryDark"
			   android:textSize="18sp"
			   android:textStyle="bold"
			   app:layout_constraintStart_toStartOf="parent"
			   app:layout_constraintTop_toBottomOf="@+id/imgView_Item" />

		  <TextView
			   android:id="@+id/textView2"
			   android:layout_width="wrap_content"
			   android:layout_height="wrap_content"
			   android:layout_marginStart="16dp"
			   android:layout_marginTop="8dp"
			   android:text="@string/descriptiontext"
			   android:textColor="@color/colorPrimaryDark"
			   android:textSize="14sp"
			   android:textStyle="bold"
			   app:layout_constraintStart_toStartOf="parent"
			   app:layout_constraintTop_toBottomOf="@+id/textView" />

		  <TextView
			   android:id="@+id/textView3"
			   android:layout_width="0dp"
			   android:layout_height="wrap_content"
			   android:layout_marginStart="16dp"
			   android:layout_marginTop="8dp"
			   android:layout_marginEnd="16dp"
			   android:text="@string/dec_text"
			   android:textColor="@color/colorPrimary"
			   android:textSize="14sp"
			   app:layout_constraintEnd_toEndOf="parent"
			   app:layout_constraintStart_toStartOf="parent"
			   app:layout_constraintTop_toBottomOf="@+id/textView2" />

		  <TextView
			   android:id="@+id/textView12"
			   android:layout_width="wrap_content"
			   android:layout_height="wrap_content"
			   android:layout_marginTop="16dp"
			   android:text="@string/contact_us"
			   android:textColor="@color/colorPrimaryDark"
			   android:textSize="14sp"
			   android:textStyle="bold"
			   app:layout_constraintStart_toStartOf="@+id/textView"
			   app:layout_constraintTop_toBottomOf="@+id/textView3" />

		  <ImageView
			   android:id="@+id/imageView5"
			   android:layout_width="wrap_content"
			   android:layout_height="wrap_content"
			   android:layout_marginTop="8dp"
			   android:layout_marginBottom="16dp"
			   android:contentDescription="@string/description"
			   android:src="@drawable/ic_home_run"
			   app:layout_constraintBottom_toBottomOf="parent"
			   app:layout_constraintStart_toStartOf="@+id/imageView6"
			   app:layout_constraintTop_toBottomOf="@+id/imageView6" />

		  <ImageView
			   android:id="@+id/imageView6"
			   android:layout_width="wrap_content"
			   android:layout_height="wrap_content"
			   android:layout_marginTop="8dp"
			   android:contentDescription="@string/description"
			   android:src="@drawable/ic_phone"
			   app:layout_constraintStart_toStartOf="@+id/imageView7"
			   app:layout_constraintTop_toBottomOf="@+id/imageView7" />

		  <ImageView
			   android:id="@+id/imageView7"
			   android:layout_width="wrap_content"
			   android:layout_height="wrap_content"
			   android:layout_marginTop="8dp"
			   android:contentDescription="@string/description"
			   android:src="@drawable/ic_mail"
			   app:layout_constraintStart_toStartOf="@+id/textView12"
			   app:layout_constraintTop_toBottomOf="@+id/textView12" />

		  <TextView
			   android:id="@+id/txtAddress2"
			   android:layout_width="wrap_content"
			   android:layout_height="wrap_content"
			   android:layout_marginStart="8dp"
			   android:text="@string/_10_st_cairo_egypt"
			   android:textColor="@color/colorPrimary"
			   android:textSize="14sp"
			   app:layout_constraintBottom_toBottomOf="@+id/imageView5"
			   app:layout_constraintStart_toEndOf="@+id/imageView5"
			   app:layout_constraintTop_toTopOf="@+id/imageView5" />

		  <TextView
			   android:id="@+id/txtEmail"
			   android:layout_width="wrap_content"
			   android:layout_height="wrap_content"
			   android:layout_marginStart="8dp"
			   android:text="@string/alialfayed1_gmail_com"
			   android:textColor="@color/colorPrimary"
			   android:textSize="14sp"
			   app:layout_constraintBottom_toBottomOf="@+id/imageView7"
			   app:layout_constraintStart_toEndOf="@+id/imageView7"
			   app:layout_constraintTop_toTopOf="@+id/imageView7" />

		  <TextView
			   android:id="@+id/txtPhone"
			   android:layout_width="wrap_content"
			   android:layout_height="wrap_content"
			   android:layout_marginStart="8dp"
			   android:text="@string/_201014775215"
			   android:textColor="@color/colorPrimary"
			   android:textSize="14sp"
			   app:layout_constraintBottom_toBottomOf="@+id/imageView6"
			   app:layout_constraintStart_toEndOf="@+id/imageView6"
			   app:layout_constraintTop_toTopOf="@+id/imageView6" />
	 </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>